--- a/index.html
+++ b/index.html
@@ -147,11 +147,7 @@
     </section><!-- /About Section -->
 
     <!-- Stats Section -->
-    <section id="stats" class="stats section">
-
-     
-
-    </section><!-- /Stats Section -->
+    <!-- /Stats Section -->
 
     <!-- Skills Section -->
     <section id="skills" class="skills section light-background">
