--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>Aspiring Computer Scientist with expertise in C++ and Python, passionate about Machine Learning, Artificial Intelligence and building intelligent systems. Strong foundation in Mathematics and Theoretical Computer Science, complemented by experience in project management and problem-solving</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -246,45 +246,37 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>F.Sc Pre Engineering</h4>
+              <h5>2022-10</h5>
+              <p><em>Govt Higher Secondry School Danda Shah Bilawal - Chakwal, Punjab, Pakistan</em></p>
+              <p>Completed F.Sc. Pre-Engineering with a focus on mathematics and physics, developing strong analytical and problem-solving skills essential for technical fields.</p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Bachelor of Science in Computer science</h4>
+              <h5>Expected In 2026-8</h5>
+              <p><em>Hitec University - Taxila, Pakistan</em></p>
+              <p>Pursuing a Bachelor's degree in Computer Science with a focus on programming, AI, and Machine Learning. Developing advanced skills in algorithms, problem-solving, and creating intelligent software solutions.</p>
             </div><!-- Edn Resume Item -->
 
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="resume-title">Professional Experience</h3>
+            <h3 class="resume-title">Professional Certificates</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul>
+              <h4>Machine Learning Specialization</h4>
+              <h5>2024/3 - 2024/10 </h5>
+              <p><em>Stanford University & DeepLearning.AI </em></p>
+             
+                <p>Completed Machine Learning Specialization by Stanford University and DeepLearning.AI on Coursera, gaining in-depth knowledge of machine learning algorithms, deep learning, and AI techniques to build intelligent systems and data-driven solutions.</p>
+              
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
+              <h4>Programming for Everybody</h4>
+              <h5>2024/1 - 2024/3</h5>
+              <p><em>University of Michigan</em></p>
+              <p>Completed 'Programming for Everybody' course from the University of Michigan on Coursera, gaining a strong foundation in Python programming and problem-solving skills for software development and automation.</p>
             </div><!-- Edn Resume Item -->
 
           </div>
