--- a/index.html
+++ b/index.html
@@ -299,9 +299,16 @@
                   <p>collaborate.jawad@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
+              <iframe src="https://www.google.com/maps/place/33%C2%B040'53.8%22N+73%C2%B002'09.3%22E/@33.6816155,73.0333418,17z/data=!3m1!4b1!4m4!3m3!8m2!3d33.6816111!4d73.0359167?entry=ttu&g_ep=EgoyMDI0MTIwOS4wIKXMDSoASAFQAw%3D%3D" 
+        frameborder="0" 
+        style="border:0; width: 100%; height: 270px;" 
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade">
+           </iframe>
 
-              <iframe src="https://www.google.com/maps/place/33%C2%B040'53.8%22N+73%C2%B002'09.3%22E/@33.6816155,73.0333418,17z/data=!3m1!4b1!4m4!3m3!8m2!3d33.6816111!4d73.0359167?entry=ttu&g_ep=EgoyMDI0MTIwOS4wIKXMDSoASAFQAw%3D%3D" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+
+                  </div>
           </div>
 
           <div class="col-lg-7">
