--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                   <p>collaborate.jawad@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
-              <iframe src="https://www.google.com/maps/place/33%C2%B040'53.8%22N+73%C2%B002'09.3%22E/@33.6816155,73.0333418,17z/data=!3m1!4b1!4m4!3m3!8m2!3d33.6816111!4d73.0359167?entry=ttu&g_ep=EgoyMDI0MTIwOS4wIKXMDSoASAFQAw%3D%3D" 
+              <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3320.056116369588!2d73.0359167!3d33.6816111!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzPCsDQwJzUzLjgiTiA3M8KwMDInMDkuMyJF!5e0!3m2!1sen!2s!4v1734003522130!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" 
         frameborder="0" 
         style="border:0; width: 100%; height: 270px;" 
         allowfullscreen="" 
