--- a/index.html
+++ b/index.html
@@ -299,13 +299,8 @@
                   <p>collaborate.jawad@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
-              <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3320.056116369588!2d73.0359167!3d33.6816111!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzPCsDQwJzUzLjgiTiA3M8KwMDInMDkuMyJF!5e0!3m2!1sen!2s!4v1734003522130!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" 
-        frameborder="0" 
-        style="border:0; width: 100%; height: 270px;" 
-        allowfullscreen="" 
-        loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade">
-           </iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3320.056116369588!2d73.0359167!3d33.6816111!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzPCsDQwJzUzLjgiTiA3M8KwMDInMDkuMyJF!5e0!3m2!1sen!2s!4v1734003522130!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
 
 
                   </div>
