--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <a href="https://www.instagram.com/jawadahmadcs" class="instagram"><i class="bi bi-instagram"></i></a>
       <a href="https://github.com/JawadAhmadCS" class="github"><i class="bi bi-github"></i></a>
       <a href="https://www.linkedin.com/in/jawadahmadcs/" class="linkedin"><i class="bi bi-linkedin"></i></a>
-      <a href="https://[your-blogger-profile-url]" class="blogger"><i class="bi bi-pencil-square"></i></a>
+      <a href="https://jawadahmadcs.blogspot.com/ class="blogger"><i class="bi bi-pencil-square"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
