--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     <div class="social-links text-center">
       <a href="https://www.facebook.com/JawadAhmadCS" class="facebook"><i class="bi bi-facebook"></i></a>
       <a href="https://github.com/JawadAhmadCS" class="github"><i class="bi bi-github"></i></a>
-      <a href="https://www.linkedin.com/in/jawadahmadcs/" class="linkedin"><i class="bi bi-linkedin"></i></a>
-      <a href="https://www.instagram.com/jawadahmadcs" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="https://jawadahmadcs.blogspot.com/" class="blogger"><i class="bi bi-pencil-square"></i></a>
+      <a href="https://www.linkedin.com/in/JawadAhmadCS/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="https://www.instagram.com/JawadAhmadCS" class="instagram"><i class="bi bi-instagram"></i></a>
+      <a href="https://JawadAhmadCS.blogspot.com/" class="blogger"><i class="bi bi-pencil-square"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -102,7 +102,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>10 Oct 2004</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>jawadahmadcs.blogspot.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>JawadAhmadCS.blogspot.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+92 310 5176 714 </span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
                   
